--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@twa-dev/sdk": "^7.10.1",
     "ionicons": "^7.4.0",
     "lucide-angular": "^0.454.0",
     "rxjs": "~7.8.0",
