--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
-    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
@@ -24,6 +23,7 @@
     "ionicons": "^7.4.0",
     "lucide-angular": "^0.454.0",
     "rxjs": "~7.8.0",
+    "test-app": "file:",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
