--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ngrx/signals": "^18.1.1",
     "@twa-dev/sdk": "^7.10.1",
     "ionicons": "^7.4.0",
     "lucide-angular": "^0.454.0",
